@@ -1,3 +1,10 @@
+2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-tab.y: Make struct and array constructors primary
+	syntax entities.
+	* testsuite/poke.pkl/scons-70.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* configure.ac: Update version to 2.3.
